2007-10-23  Martin Leidig  <mleidig@schlund.de>

	Added role-based authorization support. Now it's possible to define roles
	and assign authorizations to them. Currently we only support pageaccess
	authorizations, further authorizations, like method access will be possible
	in later releases.
	Roles can be assigned to the current user or session by setting an Authentication
	object using the Context's setAuthentication method. The pageaccess authorization 
	is done by interfering documentFromCurrentStep() and checking if the current
	roles permit accessing the current page. The role definition and assignment of
	authorizations is done in the ContextXMLServlet's configuration file.

	Added:

	* src/de/schlund/pfixcore/auth
	* src/de/schlund/pfixcore/auth/Authentication.java
	* src/de/schlund/pfixcore/auth/AuthorizationException.java
	* src/de/schlund/pfixcore/auth/AuthorizationInterceptor.java
	* src/de/schlund/pfixcore/auth/AuthenticationImpl.java
	* src/de/schlund/pfixcore/auth/Role.java
	* src/de/schlund/pfixcore/auth/NotAuthenticatedException.java
	* src/de/schlund/pfixcore/auth/RoleImpl.java
	* src/de/schlund/pfixcore/auth/AccessDeniedException.java
	* src/de/schlund/pfixcore/auth/RoleNotFoundException.java
	* src/de/schlund/pfixcore/auth/AuthenticationException.java
	* src/de/schlund/pfixxml/config/impl/PageAccessConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/PageAccessRule.java
	* src/de/schlund/pfixxml/config/impl/RoleConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/RoleRule.java
	* src/de/schlund/pfixxml/config/PageAccessConfig.java
	* src/de/schlund/pfixxml/config/RoleConfig.java

	Modified:

	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/workflow/Context.java
	* src/de/schlund/pfixxml/config/ContextConfig.java
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/ContextConfigImpl.java