@@ -9,7 +9,7 @@
       <body style="font-size:xx-small">
         <br/><br/>
         <div align="center">
-          <table cellpadding="2" cellspacing="0" style="background-color: #aaaacc; border: 1px solid black">
+          <table cellpadding="3" cellspacing="0" style="background-color: #aaaacc; border: 1px solid black">
             <tr>
               <td align="center" bgcolor="#cc0000" colspan="2">
                 <span style="color:#ffffff; font-weight: bold">
@@ -34,7 +34,7 @@
 
 
   <xsl:template match="/error[@type != 'xslt']">
-    <xsl:call-template name="exception"/>
+    <xsl:apply-templates select="exception"/>
     <xsl:call-template name="sessioninfo"/>
     <xsl:call-template name="requestparams"/>
     <xsl:call-template name="laststeps"/>
@@ -134,54 +134,83 @@
             <xsl:otherwise>#ccccee</xsl:otherwise>
           </xsl:choose>
         </xsl:attribute>
-        <td valign="top"><xsl:value-of select="@key"/></td>
+        <td valign="top" style="font-family: monospace">
+          <xsl:call-template name="linewrap">
+            <xsl:with-param name="str" select="@key"/>
+            <xsl:with-param name="len" select="33"/>
+          </xsl:call-template>  
+        </td>
         <td><pre><xsl:value-of select="text()"/></pre></td>
       </tr>
     </xsl:for-each>
   </xsl:template>
 
-  <xsl:template name="exception">
+  <xsl:template match="exception">
+    <xsl:variable name="indent" select="count(ancestor::exception)*15"/>
     <tr>
-      <td colspan="2" bgcolor="#dd9999"><b>Exception:</b></td>
+      <td colspan="2" bgcolor="#dd9999" style="padding-left:{$indent}px">
+        <b>
+          <xsl:choose>
+            <xsl:when test="parent::exception">Cause:</xsl:when>
+            <xsl:otherwise>Exception:</xsl:otherwise>
+          </xsl:choose>
+        </b>
+      </td>
     </tr>
-    <tr bgcolor="#ccccee"><td>Type</td><td><xsl:value-of select="exception/@type"/></td></tr>
+    <tr bgcolor="#ccccee">
+      <td style="padding-left:{$indent}px">Type</td>
+      <td><xsl:value-of select="@type"/></td></tr>
     <tr bgcolor="#aaaacc">
-      <td>Message</td>
+      <td valign="top" style="padding-left:{$indent}px">Message</td>
       <xsl:choose>
-        <xsl:when test="exception/@msg != ''">
-          <td><xsl:value-of select="exception/@msg"/></td>
+        <xsl:when test="@msg != ''">
+          <td><xsl:value-of select="@msg"/></td>
         </xsl:when>
         <xsl:otherwise>
           <td>Not available</td>
         </xsl:otherwise> 
       </xsl:choose>
     </tr>
-    <xsl:for-each select="exception/stacktrace/line">
-      
-      <tr>
-        <xsl:choose>
-        <xsl:when test="position() = 1">
-          <td bgcolor="#ccccee">Stacktrace</td>
-        </xsl:when>
-        <xsl:otherwise>
-          <td/>
-        </xsl:otherwise>
-        </xsl:choose>
-        <td>
-          <xsl:attribute name="bgcolor">
-            <xsl:choose>
-              <xsl:when test="position() mod 2 = 0">#aaaacc</xsl:when>
-              <xsl:otherwise>#ccccee</xsl:otherwise>
-            </xsl:choose> 
-          </xsl:attribute>
-          <xsl:value-of select="text()"/>
-        </td>
-      </tr>
-    </xsl:for-each>
-    
+    <tr bgcolor="#ccccee">
+      <xsl:variable name="stackid">stack<xsl:value-of select="generate-id()"/></xsl:variable>
+      <td valign="top" style="padding-left:{$indent}px">
+        Stacktrace 
+      </td>
+      <td>
+        <div id="{$stackid}_short">
+          <span style="margin-right: 5px; cursor:pointer; color:#000000; font-family:monospace; border-style:groove; border-width:2px; border-color:#ccccee;" onclick="document.getElementById('{$stackid}').style.display='block';document.getElementById('{$stackid}_short').style.display='none'">+</span>
+          <xsl:value-of select="stacktrace/line"/>
+        </div>
+        <div id="{$stackid}" style="display:none">  
+          <span style="margin-right: 5px; cursor:pointer; color:#000000; font-family:monospace; border-style:groove; border-width:2px; border-color:#ccccee;" onclick="document.getElementById('{$stackid}').style.display='none';document.getElementById('{$stackid}_short').style.display='block'">-</span>
+          <xsl:for-each select="stacktrace/line">
+            <xsl:value-of select="text()"/><br/>
+          </xsl:for-each>
+        </div>
+      </td>
+    </tr>
+    <xsl:apply-templates select="exception"/>
   </xsl:template>
-
-
   
+  <xsl:template name="linewrap">
+    <xsl:param name="str"/>
+    <xsl:param name="len"/>
+    <xsl:choose>
+      <xsl:when test="string-length($str) &gt; $len">
+        <div>
+          <xsl:value-of select="substring($str,0,$len)"/>
+        </div>
+        <xsl:call-template name="linewrap">
+          <xsl:with-param name="str" select="substring($str,$len)"/>
+          <xsl:with-param name="len" select="$len"/>
+        </xsl:call-template>
+      </xsl:when>
+      <xsl:otherwise>
+        <div>
+          <xsl:value-of select="$str"/>
+        </div>
+      </xsl:otherwise>
+    </xsl:choose>
+  </xsl:template>
   
 </xsl:stylesheet>
