@@ -1,3 +1,14 @@
+2007-10-25  Martin Leidig  <mleidig@schlund.de>
+
+	Improved error page of UniversalExceptionProcessor. Now all exception causes are
+	shown (needed cause the toplevel exceptions aren't meaningful enough). All stacktraces
+	are available too (and additionally are collapsible).
+
+	* projects/core/xsl/errorrepresentation.xsl: show exception causes too, made 
+	stacktrace view collapsible via Javascript, force wrapping of long strings in XSLT
+	* src/de/schlund/pfixxml/exceptionprocessor/util/XMLCreatorVisitor.java: recursively
+	append exception causes (with stacktraces) to DOM tree
+
 2007-10-23  Martin Leidig  <mleidig@schlund.de>
 
 	Added role-based authorization support. Now it's possible to define roles
